--- a/fullpage.css
+++ b/fullpage.css
@@ -93,3 +93,17 @@ background-color: aliceblue;
     height: auto;
 }
 
+    .divider {
+    border-left:1px solid #16222c;
+    height:120px;
+    position:absolute;left:370px;top:115px;
+    }
+
+    .img1{
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        border: 2px solid #fff;
+        margin-bottom: 10px;
+        position:absolute;left:249px;top:125px;
+    }
