--- a/fullpage.css
+++ b/fullpage.css
@@ -6,9 +6,10 @@
     height: 100vh; 
     background-color: #fe5f46; 
     color: #fff; 
-    font-size: 20px; 
+    font-size: 26px; 
     text-align: center; 
-    font-family: Palanquin, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    
 }
 
 .section:nth-child(2n) {
@@ -85,25 +86,125 @@ background-color: aliceblue;
     flex-direction: column;
     align-items: center;
     text-align: center;
+    z-index:1;
 }
+.paragraph1{
+    position:absolute;left:450px;top:120px;
+    text-align:left;
+}
+.paragraph2{
+    position:absolute;left:450px;top:330px;
+    text-align:left;
+}
+
+.paragraph3{
+    position:absolute;left:450px;top:500px;
+    text-align:left;
+}
+
 
 
 .experience-content img {
     max-width: 100%;
     height: auto;
 }
+.experience-text{
+    position:absolute;left:0px;top:260px;
+    text-align:left;
+    rotate: -90deg;
+    font-family: fantasy;
+    font-size: 60px;
+}
 
+.projects-text{
+    position:absolute;right:0px;top:260px;
+    text-align:left;
+    rotate: 90deg;
+    font-family: fantasy;
+    font-size: 60px;
+}
     .divider {
     border-left:1px solid #16222c;
-    height:120px;
-    position:absolute;left:370px;top:115px;
+    height:70000px;
+    top:1px;
+    position:absolute;left:420px;
     }
+    .divider2 {
+        border-left:1px solid #16222c;
+        height:70000px;
+        top:1px;
+        position:absolute;right:420px;
+        }
 
     .img1{
-        width: 100px;
-        height: 100px;
+        width: 150px;
+        height: 150px;
         border-radius: 50%;
         border: 2px solid #fff;
         margin-bottom: 10px;
         position:absolute;left:249px;top:125px;
+    }
+
+    .img2{
+        width: 155px;
+        height: 155px;
+        border-radius: 50%;
+        border: 2px solid #fff;
+        margin-bottom: 10px;
+        position:absolute;left:-203px;top:170px ;
+        z-index:1;
+    }
+    .img3{
+        width: 155px;
+        height: 155px;
+        border-radius: 50%;
+        border: 2px solid #fff;
+        margin-bottom: 10px;
+        position:absolute;left:249px;bottom:50px;
+    }
+
+
+
+    /*
+
+    media queries
+
+    */
+
+    body {
+        font-size: 16px;
+        /* Other common styles */
+    }
+    
+    /* Styles for small screens (mobile) */
+    @media (max-width: 600px) {
+        .paragraph1{
+            font-size:20%
+        }
+       
+        
+    }
+    
+    /* Styles for medium screens (tablets) */
+    @media (min-width: 601px) and (max-width: 1024px) {
+        .paragraph1, .paragraph2, .paragraph3 {
+
+            font-size: 16px;
+            
+        }
+        .paragraph1{
+            top:15%;
+        }
+
+        .paragraph2{
+            top:42%;
+        }
+    }
+    
+    /* Styles for large screens (desktop) */
+    @media (min-width: 1025px) {
+        body {
+            font-size: 18px;
+            /* Adjust other styles for desktop layout */
+        }
     }
